# oracle

./: .env.example  .gitignore  CONTRIBUTION_GUIDE.md  README.md  pyproject.toml
examples/allora/: example-agent.py  example-allora.py  example-worker.py
examples/game/: test_agent.py  test_worker.py
examples/hosted_agent/: example-allora.py  example-twitter.py
examples/stateofmika/: example_som.py
plugins/allora/: README.md  allora_plugin.py  client.py  pyproject.toml  test_allora_plugin.py
plugins/allora/allora_game_sdk/: allora_plugin.py
plugins/allora/examples/: example-agent.py  example-worker.py
plugins/allora/functions/: get_all_topics.py  get_inference_by_topic_id.py  get_price_prediction.py
plugins/conflux/: README.md
plugins/onchain_actions/: README.md
plugins/onchain_actions/examples/: example-agent.py  example-worker.py
plugins/stateofmika/: pyproject.toml
plugins/stateofmika/functions/: router.py
plugins/twitter/: pyproject.toml  test_twitter.py  twitter_plugin.py
plugins/twitter/twitter_plugin_gamesdk/: twitter_plugin.py
src/game_sdk/game/: README.md  agent.py  api.py  api_v2.py  custom_types.py  utils.py  worker.py
src/game_sdk/hosted_game/: README.md  agent.py  sdk.py
src/game_sdk/hosted_game/functions/: allora.py
src/game_sdk/plugins/allora/: allora.py
src/game_sdk/plugins/allora/functions/: __init__.py  get_all_topics.py  get_inference_by_topic_id.py
src/game_sdk/plugins/twitter/: test_twitter.py  twitter_plugin.py
